fixed spacing for small screens

--- a/index.css
+++ b/index.css
@@ -142,7 +142,7 @@ button {
 }
 
 #question-line {
-    font-size: 100%;
+    font-size: 90%;
     padding: 2%;
     margin: 3%;
 }
@@ -199,24 +199,28 @@ button {
   } 
 
 /* media sizes */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+@media (max-device-width : 480px) {
     .container {
     font-size: 18px;
     font-weight: 500;
     width: 80%;
     max-width: 600px;
-    height: 70%;
+    height: 75%;
     margin-bottom: 20px;
     margin-top: 20px;
-}
+    }
 
     .submit-next-button {
         position: absolute;
-        bottom: 2%;
+        bottom: 0;
         width: 50%;
         height: 10%;
         left: -50%;
         right: -50%;
+    }
+
+    .top-div {
+        height: 80%:
     }
 
     .top-div .scorecard::before {
@@ -241,7 +245,10 @@ button {
         line-height: 140%;
         font-size: 80%;
     }
-    /* center beginning and results div horizontally */
+
+    #next-button {
+        font-size: 90%;
+    }
 }
 
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) {
